--- a/formstyle.css
+++ b/formstyle.css
@@ -13,7 +13,7 @@ h1{
     border-color:antiquewhite;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding:10px;
-    color:
+    background-color:rgb(154, 203, 247);
 }
 
 main{
@@ -25,4 +25,5 @@ main{
     border-bottom-right-radius: 10px;
     margin:20px 20px 0px 20px;
     padding:5px;
+    background-color:rgb(154, 203, 247);
 }
